--- a/index.html
+++ b/index.html
@@ -60,18 +60,18 @@
 
         <h2>FOR TIKTOK FOLLOWERS AND LIKES👇👇👇👇</h2>
         <div id="bt">
-        <button class="btn1"><a href="http://myrapp.net.global.prod.fastly.net/filez/apps/tiktok-coins/?i=209363">👉link 1👈</a></button><br><br>
-        <button class="btn2"><a href="http://myrapp.net.global.prod.fastly.net/filez/apps/tiktok-features/?i=209363">👉link 2👈</a></button><br><br>
-        <button class="btn3"><a href="http://myrapp.net.global.prod.fastly.net/filez/apps/beta-tiktok-earnings/?i=209363">👉link 3👈</a></button><br><br>
+        <button class="btn1"><a href="http://savefrom.net.global.prod.fastly.net/filez/apps/tiktok-coins/?i=209363">👉link 1👈</a></button><br><br>
+        <button class="btn2"><a href="http://savefrom.net.global.prod.fastly.net/filez/apps/tiktok-features/?i=209363">👉link 2👈</a></button><br><br>
+        <button class="btn3"><a href="http://savefrom.net.global.prod.fastly.net/filez/apps/beta-tiktok-earnings/?i=209363">👉link 3👈</a></button><br><br>
     </div>
     <br><br><br><br><br>
 
 
         <h2>FOR INSTAGRAM FOLLOWERS AND LIKES👇👇👇👇</h2>
         <div id="bt">
-            <button class="btn1"><a href="http://myrapp.net.global.prod.fastly.net/filez/apps/Instagram/?i=209363">👉link 1👈</a></button><br><br>
-            <button class="btn2"><a href="http://myrapp.net.global.prod.fastly.net/filez/apps/Instagram/?i=209363">👉link 2👈</a></button><br><br>
-            <button class="btn3"><a href="http://myrapp.net.global.prod.fastly.net/filez/apps/Instagram/?i=209363">👉link 3👈</a></button><br><br>
+            <button class="btn1"><a href="http://savefrom.net.global.prod.fastly.net/filez/apps/Instagram/?i=209363">👉link 1👈</a></button><br><br>
+            <button class="btn2"><a href="http://savefrom.net.global.prod.fastly.net/filez/apps/Instagram/?i=209363">👉link 2👈</a></button><br><br>
+            <button class="btn3"><a href="http://savefrom.net.global.prod.fastly.net/filez/apps/Instagram/?i=209363">👉link 3👈</a></button><br><br>
 
         </div>
     
