--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </ul>
     </nav>
     <br><br><br>
-    <h1 id="logo" style="grid-auto-flow: dense;">
+    <h1 id="logo">
         <span>INCREASE</span>
         <span>FOLLOWERS</span>
         <span>AND</span>
