--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       .popup {
           position: fixed;
           top: 50%;
-          left: fixed;
+          left: 10%;
           transform: translate(-50%, -50%);
           background-color: #fff;
           padding: 20px;
@@ -33,7 +33,7 @@
 .popup {
           position: fixed;
           top: 50%;
-          left: fixed;
+          left: 10%;
           transform: translate(-50%, -50%);
           background-color: #fff;
           padding: 20px;
