--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       </h1>
     <img src="images (9) (12).jpeg" alt="TIKTOK FOLLOWERS">
     <img src="images (1).png" alt="INSTAGRAM FOLLOWERS">
-    <div id="intro">
+    <div id="introz">
         <P>This is the best site which gives you free followers for the first time and the first login. 
             Then for more likes and followers you will need to subscribe 
         </P><br><br><br><br><br>
